--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "player-poc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yubodiwu.github.io/gp-vjs-pages",
+  "homepage": "https://yubodiwu.github.io/gp-sws-iframe-generator",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
